--- a/Door_Lock/Door_Lock.csproj
+++ b/Door_Lock/Door_Lock.csproj
@@ -60,7 +60,11 @@
     <Compile Include="RemoveAcc.xaml.cs">
       <DependentUpon>RemoveAcc.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RemoveAccWarning.xaml.cs">
+      <DependentUpon>RemoveAccWarning.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RemoveID.cs" />
+    <Compile Include="Userinitials.cs" />
     <Page Include="AddAcc.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -82,6 +86,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="RemoveAcc.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="RemoveAccWarning.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
