--- a/Door_Lock/Door_Lock.csproj
+++ b/Door_Lock/Door_Lock.csproj
@@ -57,6 +57,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Log.xaml.cs">
+      <DependentUpon>Log.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RemoveAcc.xaml.cs">
       <DependentUpon>RemoveAcc.xaml</DependentUpon>
     </Compile>
@@ -66,6 +69,10 @@
     <Compile Include="RemoveID.cs" />
     <Compile Include="Userinitials.cs" />
     <Page Include="AddAcc.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Log.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
