--- a/Door_Lock/Door_Lock.csproj
+++ b/Door_Lock/Door_Lock.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="extra.cs" />
     <Compile Include="Log.xaml.cs">
       <DependentUpon>Log.xaml</DependentUpon>
     </Compile>
@@ -66,11 +67,9 @@
     <Compile Include="RemoveAccWarning.xaml.cs">
       <DependentUpon>RemoveAccWarning.xaml</DependentUpon>
     </Compile>
-    <Compile Include="RemoveID.cs" />
     <Compile Include="showacc.xaml.cs">
       <DependentUpon>showacc.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Userinitials.cs" />
     <Page Include="AddAcc.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -90,7 +89,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="database.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
